docs: add example of mpfd
